--- a/public/css/fontend/css/style.css
+++ b/public/css/fontend/css/style.css
@@ -325,7 +325,8 @@ a:focus {
 }
 
 .shop_section .box {
-  background-color: #eeeeee;
+  border: 2px solid lightpink;
+  /* background-color: linen; */
   position: relative;
   padding: 10px;
   margin-top: 25px;
@@ -347,11 +348,12 @@ a:focus {
           align-items: center;
   padding: 15px 30px;
   height: 245px;
+  
 }
 
 .shop_section .box .img-box img {
   max-width: 100%;
-  max-height: 145px;
+  max-height: 300px;
 }
 
 .shop_section .box .detail-box {
@@ -365,6 +367,7 @@ a:focus {
 
 .shop_section .box .detail-box h6 span {
   color: #db4f66;
+  text-decoration: none !important;
 }
 
 .shop_section .box .new {
